<resources>
    <string name="app_name">Sprinkler System</string>
    <string name="first_page">Dashboard</string>
    <string name="system_id">Device ID</string>
    <string name="remember_me">Remember Me</string>
    <string name="logo_desc">Two black leaves</string>
    <string name="zone_running">Zone Running</string>
    <string name="prog_running">Prog Running</string>
    <string name="edit_mode">Edit/Set Options</string>
    <string name="manual_mode">Manual Mode</string>
    <string name="manual">Manual</string>
    <string name="program_mode">Program</string>
    <string name="off_mode">OFF Mode</string>
    <string name="warning">Warnings</string>
    <string name="conflict">Conflicts</string>
    <string name="settings">Settings</string>
    <string name="zones">Pick Zones</string>
    <string name="zone1">Zone 1</string>
    <string name="zone2">Zone 2</string>
    <string name="zone3">Zone 3</string>
    <string name="zone4">Zone 4</string>
    <string name="zone5">Zone 5</string>
    <string name="zone6">Zone 6</string>
    <string name="zone7">Zone 7</string>
    <string name="zone8">Zone 8</string>
    <string name="pick_runtime">Pick Runtimes</string>
    <string name="all">ALL</string>
    <string name="pick_delay">Pick Delay</string>
    <string name="confirm">Confirm</string>
    <string name="delay">Delay</string>
    <string name="prog_number">Program Number</string>
    <string name="pick_days">Pick Days</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="pick_start_time">Pick Start Time</string>
    <string name="start_time">Start Time</string>
    <string name="create">Create</string>
    <string name="enter_runtime1">Enter Runtime 1</string>
    <string name="enter_runtime2">Enter Runtime 2</string>
    <string name="enter_runtime3">Enter Runtime 3</string>
    <string name="enter_runtime4">Enter Runtime 4</string>
    <string name="enter_runtime5">Enter Runtime 5</string>
    <string name="enter_runtime6">Enter Runtime 6</string>
    <string name="enter_runtime7">Enter Runtime 7</string>
    <string name="enter_runtime8">Enter Runtime 8</string>
    <string name="pick_runtimes">Pick Runtime(s)</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="clock_format">Clock Format</string>
    <string name="clock_format_summary">Choose format for in app time.</string>
</resources>